--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
   },
   "dependencies": {
     "@storyblok/react": "~1.3.3",
+    "autoprefixer": "^10.4.13",
     "axios": "~0.27.2",
     "next": "~13.0.5",
+    "postcss": "^8.4.19",
     "react": "~18.2.0",
-    "react-dom": "~18.2.0"
+    "react-dom": "~18.2.0",
+    "tailwindcss": "^3.2.4"
   },
   "devDependencies": {
     "@types/node": "~18.11.9",
