--- a/package.json
+++ b/package.json
@@ -9,22 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@storyblok/react": "~1.3.3",
-    "autoprefixer": "^10.4.13",
-    "axios": "~0.27.2",
-    "next": "~13.0.5",
-    "postcss": "^8.4.19",
+    "@storyblok/react": "~2.0.3",
+    "autoprefixer": "~10.4.13",
+    "next": "~13.1.1",
+    "postcss": "~8.4.21",
     "react": "~18.2.0",
     "react-dom": "~18.2.0",
-    "tailwindcss": "^3.2.4"
+    "tailwindcss": "~3.2.4"
   },
   "devDependencies": {
-    "@types/node": "~18.11.9",
-    "@types/react": "~18.0.25",
-    "@types/react-dom": "~18.0.9",
-    "eslint": "~8.28.0",
-    "eslint-config-next": "~13.0.5",
-    "prettier": "~2.8.0",
-    "typescript": "~4.9.3"
+    "@types/node": "~18.11.18",
+    "@types/react": "~18.0.26",
+    "@types/react-dom": "~18.0.10",
+    "eslint": "~8.31.0",
+    "eslint-config-next": "~13.1.1",
+    "prettier": "~2.8.2",
+    "typescript": "~4.9.4"
   }
 }
