--- a/package.json
+++ b/package.json
@@ -1,29 +1,31 @@
 {
- "name": "next-storyblok",
- "version": "0.1.0",
- "private": true,
- "scripts": {
-  "dev": "next dev",
-  "build": "next build",
-  "start": "next start",
-  "lint": "next lint"
- },
- "dependencies": {
-  "@storyblok/react": "~2.0.15",
-  "autoprefixer": "~10.4.14",
-  "next": "~13.2.4",
-  "postcss": "~8.4.21",
-  "react": "~18.2.0",
-  "react-dom": "~18.2.0",
-  "tailwindcss": "~3.2.7"
- },
- "devDependencies": {
-  "@types/node": "~18.15.3",
-  "@types/react": "~18.0.28",
-  "@types/react-dom": "~18.0.11",
-  "eslint": "~8.36.0",
-  "eslint-config-next": "~13.2.4",
-  "prettier": "~2.8.5",
-  "typescript": "~5.0.2"
- }
+  "name": "next-storyblok",
+  "version": "0.1.0",
+  "private": true,
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint",
+    "test": "vitest run"
+  },
+  "dependencies": {
+    "@storyblok/react": "~2.0.17",
+    "autoprefixer": "~10.4.14",
+    "next": "~13.3.1",
+    "react": "~18.2.0",
+    "react-dom": "~18.2.0"
+  },
+  "devDependencies": {
+    "@types/node": "~18.16.1",
+    "@types/react": "~18.2.0",
+    "@types/react-dom": "~18.2.1",
+    "eslint": "~8.39.0",
+    "eslint-config-next": "~13.3.1",
+    "postcss": "~8.4.23",
+    "prettier": "~2.8.8",
+    "tailwindcss": "~3.3.2",
+    "typescript": "~5.0.4",
+    "vitest": "^0.30.1"
+  }
 }
