--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "test": "vitest run"
+    "test": "vitest run",
+    "pull-sb-components": "storyblok pull-components --space=185369 --path=./types/",
+    "generate-sb-types": "storyblok-generate-ts source=./types/components.185369.json target=./types/sb-types",
+    "sb-types": "npm run pull-sb-components && npm run generate-sb-types"
   },
   "dependencies": {
     "@storyblok/react": "~2.0.17",
@@ -24,6 +27,8 @@
     "eslint-config-next": "~13.3.1",
     "postcss": "~8.4.23",
     "prettier": "~2.8.8",
+    "storyblok": "^3.20.0",
+    "storyblok-generate-ts": "^1.13.2",
     "tailwindcss": "~3.3.2",
     "typescript": "~5.0.4",
     "vitest": "^0.30.1"
