--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/node": "~18.16.1",
     "@types/react": "~18.2.0",
     "@types/react-dom": "~18.2.1",
+    "clsx": "^1.2.1",
     "eslint": "~8.39.0",
     "eslint-config-next": "~13.3.1",
     "postcss": "~8.4.23",
