--- a/package.json
+++ b/package.json
@@ -13,25 +13,25 @@
     "sb-types": "pnpm pull-sb-components && pnpm generate-sb-types && pnpm prettier --write ./types/sb-types.d.ts"
   },
   "dependencies": {
-    "@storyblok/react": "~2.0.17",
+    "@storyblok/react": "~2.0.18",
     "autoprefixer": "~10.4.14",
-    "next": "~13.3.1",
+    "next": "~13.3.4",
     "react": "~18.2.0",
     "react-dom": "~18.2.0"
   },
   "devDependencies": {
-    "@types/node": "~18.16.1",
+    "@types/node": "~18.16.3",
     "@types/react": "~18.2.0",
     "@types/react-dom": "~18.2.1",
-    "clsx": "^1.2.1",
+    "clsx": "~1.2.1",
     "eslint": "~8.39.0",
-    "eslint-config-next": "~13.3.1",
+    "eslint-config-next": "~13.3.4",
     "postcss": "~8.4.23",
     "prettier": "~2.8.8",
-    "storyblok": "^3.20.0",
-    "storyblok-generate-ts": "^1.13.2",
+    "storyblok": "~3.21.0",
+    "storyblok-generate-ts": "~1.13.2",
     "tailwindcss": "~3.3.2",
     "typescript": "~5.0.4",
-    "vitest": "^0.30.1"
+    "vitest": "~0.30.1"
   }
 }
