--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
     "start": "next start",
     "lint": "next lint",
     "test": "vitest run",
-    "pull-sb-components": "storyblok pull-components --space=185369 --path=./types/",
-    "generate-sb-types": "storyblok-generate-ts source=./types/components.185369.json target=./types/sb-types",
-    "sb-types": "pnpm pull-sb-components && pnpm generate-sb-types && pnpm prettier --write ./types/sb-types.d.ts"
+    "test:watch": "vitest",
+    "sb:pull-components": "storyblok pull-components --space=185369 --path=./types/",
+    "sb:generate-types": "storyblok-generate-ts source=./types/components.185369.json target=./types/sb-types",
+    "sb:eslint-types": "eslint --fix ./types/sb-types.d.ts",
+    "sb:prettier-types": "prettier --write ./types/sb-types.d.ts",
+    "sb:types": "run-s sb:pull-components sb:generate-types sb:eslint-types sb:prettier-types"
   },
   "dependencies": {
     "@storyblok/react": "~2.0.18",
@@ -26,6 +29,8 @@
     "clsx": "~1.2.1",
     "eslint": "~8.39.0",
     "eslint-config-next": "~13.3.4",
+    "eslint-plugin-unused-imports": "~2.0.0",
+    "npm-run-all": "~4.1.5",
     "postcss": "~8.4.23",
     "prettier": "~2.8.8",
     "storyblok": "~3.21.0",
