--- a/package.json
+++ b/package.json
@@ -29,10 +29,12 @@
     "clsx": "~1.2.1",
     "eslint": "~8.39.0",
     "eslint-config-next": "~13.3.4",
+    "eslint-plugin-tailwindcss": "^3.11.0",
     "eslint-plugin-unused-imports": "~2.0.0",
     "npm-run-all": "~4.1.5",
     "postcss": "~8.4.23",
     "prettier": "~2.8.8",
+    "prettier-plugin-tailwindcss": "^0.2.8",
     "storyblok": "~3.21.0",
     "storyblok-generate-ts": "~1.13.2",
     "tailwindcss": "~3.3.2",
