--- a/package.json
+++ b/package.json
@@ -16,29 +16,30 @@
     "sb:types": "run-s sb:pull-components sb:generate-types sb:eslint-types sb:prettier-types"
   },
   "dependencies": {
-    "@storyblok/react": "~2.0.18",
-    "autoprefixer": "~10.4.14",
-    "next": "~13.3.4",
+    "@storyblok/react": "~2.1.6",
+    "next": "~13.4.7",
     "react": "~18.2.0",
     "react-dom": "~18.2.0"
   },
   "devDependencies": {
-    "@types/node": "~18.16.3",
-    "@types/react": "~18.2.0",
-    "@types/react-dom": "~18.2.1",
+    "@types/node": "~20.3.1",
+    "@types/react": "~18.2.13",
+    "@types/react-dom": "~18.2.6",
+    "autoprefixer": "~10.4.14",
     "clsx": "~1.2.1",
-    "eslint": "~8.39.0",
-    "eslint-config-next": "~13.3.4",
-    "eslint-plugin-tailwindcss": "^3.11.0",
+    "eslint": "~8.43.0",
+    "eslint-config-next": "~13.4.7",
+    "eslint-plugin-tailwindcss": "~3.12.1",
     "eslint-plugin-unused-imports": "~2.0.0",
     "npm-run-all": "~4.1.5",
-    "postcss": "~8.4.23",
+    "postcss": "~8.4.24",
     "prettier": "~2.8.8",
-    "prettier-plugin-tailwindcss": "^0.2.8",
-    "storyblok": "~3.21.0",
-    "storyblok-generate-ts": "~1.13.2",
+    "prettier-plugin-tailwindcss": "~0.3.0",
+    "storyblok": "~3.24.1",
+    "storyblok-generate-ts": "~1.15.0",
     "tailwindcss": "~3.3.2",
-    "typescript": "~5.0.4",
-    "vitest": "~0.30.1"
+    "typescript": "~5.1.3",
+    "vitest": "~0.32.2",
+    "vitest-tsconfig-paths": "~3.4.1"
   }
 }
