--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "@storyblok/react": "~2.1.6",
+    "isomorphic-dompurify": "^1.6.0",
     "next": "~13.4.7",
     "react": "~18.2.0",
     "react-dom": "~18.2.0"
