--- a/package.json
+++ b/package.json
@@ -16,21 +16,21 @@
     "sb:types": "run-s sb:pull-components sb:generate-types sb:eslint-types sb:prettier-types"
   },
   "dependencies": {
-    "@storyblok/react": "~2.1.6",
-    "isomorphic-dompurify": "^1.6.0",
+    "@storyblok/react": "~2.1.7",
+    "isomorphic-dompurify": "~1.6.0",
     "next": "~13.4.7",
     "react": "~18.2.0",
     "react-dom": "~18.2.0"
   },
   "devDependencies": {
-    "@types/node": "~20.3.1",
-    "@types/react": "~18.2.13",
+    "@types/node": "~20.3.2",
+    "@types/react": "~18.2.14",
     "@types/react-dom": "~18.2.6",
     "autoprefixer": "~10.4.14",
     "clsx": "~1.2.1",
     "eslint": "~8.43.0",
     "eslint-config-next": "~13.4.7",
-    "eslint-plugin-tailwindcss": "~3.12.1",
+    "eslint-plugin-tailwindcss": "~3.13.0",
     "eslint-plugin-unused-imports": "~2.0.0",
     "npm-run-all": "~4.1.5",
     "postcss": "~8.4.24",
@@ -39,7 +39,7 @@
     "storyblok": "~3.24.1",
     "storyblok-generate-ts": "~1.15.0",
     "tailwindcss": "~3.3.2",
-    "typescript": "~5.1.3",
+    "typescript": "~5.1.5",
     "vitest": "~0.32.2",
     "vitest-tsconfig-paths": "~3.4.1"
   }
