--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "@storyblok/react": "~2.1.7",
+    "fast-xml-parser": "^4.2.5",
     "isomorphic-dompurify": "~1.6.0",
     "next": "~13.4.7",
     "react": "~18.2.0",
@@ -36,10 +37,10 @@
     "postcss": "~8.4.24",
     "prettier": "~2.8.8",
     "prettier-plugin-tailwindcss": "~0.3.0",
-    "storyblok": "~3.24.1",
+    "storyblok": "~3.24.2",
     "storyblok-generate-ts": "~1.15.0",
     "tailwindcss": "~3.3.2",
-    "typescript": "~5.1.5",
+    "typescript": "~5.1.6",
     "vitest": "~0.32.2",
     "vitest-tsconfig-paths": "~3.4.1"
   }
