--- a/package.json
+++ b/package.json
@@ -9,37 +9,39 @@
     "lint": "next lint",
     "test": "vitest run",
     "test:watch": "vitest",
-    "sb:pull-components": "storyblok pull-components --space=185369 --path=./types/",
-    "sb:generate-types": "storyblok-generate-ts source=./types/components.185369.json target=./types/sb-types",
+    "sb:pull-components": "storyblok pull-components --space=238304 --path=./types/",
+    "sb:generate-types": "storyblok-generate-ts source=./types/components.238304.json target=./types/sb-types",
     "sb:eslint-types": "eslint --fix ./types/sb-types.d.ts",
     "sb:prettier-types": "prettier --write ./types/sb-types.d.ts",
     "sb:types": "run-s sb:pull-components sb:generate-types sb:eslint-types sb:prettier-types"
   },
   "dependencies": {
-    "@storyblok/react": "~2.1.6",
-    "isomorphic-dompurify": "^1.6.0",
+    "@storyblok/react": "~2.1.7",
+    "fast-xml-parser": "~4.2.5",
+    "isomorphic-dompurify": "~1.7.0",
     "next": "~13.4.7",
     "react": "~18.2.0",
-    "react-dom": "~18.2.0"
+    "react-dom": "~18.2.0",
+    "swr": "~2.2.0"
   },
   "devDependencies": {
-    "@types/node": "~20.3.1",
-    "@types/react": "~18.2.13",
+    "@types/node": "~20.3.2",
+    "@types/react": "~18.2.14",
     "@types/react-dom": "~18.2.6",
     "autoprefixer": "~10.4.14",
     "clsx": "~1.2.1",
     "eslint": "~8.43.0",
     "eslint-config-next": "~13.4.7",
-    "eslint-plugin-tailwindcss": "~3.12.1",
+    "eslint-plugin-tailwindcss": "~3.13.0",
     "eslint-plugin-unused-imports": "~2.0.0",
     "npm-run-all": "~4.1.5",
     "postcss": "~8.4.24",
     "prettier": "~2.8.8",
     "prettier-plugin-tailwindcss": "~0.3.0",
-    "storyblok": "~3.24.1",
+    "storyblok": "~3.24.2",
     "storyblok-generate-ts": "~1.15.0",
     "tailwindcss": "~3.3.2",
-    "typescript": "~5.1.3",
+    "typescript": "~5.1.6",
     "vitest": "~0.32.2",
     "vitest-tsconfig-paths": "~3.4.1"
   }
