--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "@storyblok/react": "~2.1.7",
+    "colord": "~2.9.3",
     "fast-xml-parser": "~4.2.5",
     "isomorphic-dompurify": "~1.7.0",
     "next": "~13.4.7",
@@ -25,12 +26,12 @@
     "swr": "~2.2.0"
   },
   "devDependencies": {
-    "@types/node": "~20.3.2",
+    "@types/node": "~20.3.3",
     "@types/react": "~18.2.14",
     "@types/react-dom": "~18.2.6",
     "autoprefixer": "~10.4.14",
     "clsx": "~1.2.1",
-    "eslint": "~8.43.0",
+    "eslint": "~8.44.0",
     "eslint-config-next": "~13.4.7",
     "eslint-plugin-tailwindcss": "~3.13.0",
     "eslint-plugin-unused-imports": "~2.0.0",
@@ -42,7 +43,7 @@
     "storyblok-generate-ts": "~1.15.0",
     "tailwindcss": "~3.3.2",
     "typescript": "~5.1.6",
-    "vitest": "~0.32.2",
+    "vitest": "~0.32.4",
     "vitest-tsconfig-paths": "~3.4.1"
   }
 }
