--- a/package.json
+++ b/package.json
@@ -20,19 +20,20 @@
     "colord": "~2.9.3",
     "fast-xml-parser": "~4.3.2",
     "isomorphic-dompurify": "~1.9.0",
-    "next": "~14.0.2",
+    "next": "~14.0.3",
     "react": "~18.2.0",
     "react-dom": "~18.2.0",
+    "sharp": "~0.32.6",
     "swr": "~2.2.4"
   },
   "devDependencies": {
-    "@types/node": "~20.9.0",
-    "@types/react": "~18.2.37",
-    "@types/react-dom": "~18.2.15",
+    "@types/node": "~20.9.3",
+    "@types/react": "~18.2.38",
+    "@types/react-dom": "~18.2.16",
     "autoprefixer": "~10.4.16",
     "clsx": "~2.0.0",
-    "eslint": "~8.53.0",
-    "eslint-config-next": "~14.0.2",
+    "eslint": "~8.54.0",
+    "eslint-config-next": "~14.0.3",
     "eslint-plugin-tailwindcss": "~3.13.0",
     "eslint-plugin-unused-imports": "~3.0.0",
     "npm-run-all": "~4.1.5",
@@ -42,7 +43,7 @@
     "storyblok": "~3.25.3",
     "storyblok-generate-ts": "~2.0.1",
     "tailwindcss": "~3.3.5",
-    "typescript": "~5.2.2",
+    "typescript": "~5.3.2",
     "vitest": "~0.34.6",
     "vitest-tsconfig-paths": "~3.4.1"
   }
