--- a/package.json
+++ b/package.json
@@ -16,35 +16,43 @@
     "sb:types": "run-s sb:pull-components sb:generate-types sb:eslint-types sb:prettier-types"
   },
   "dependencies": {
-    "@storyblok/react": "~3.0.6",
+    "@conform-to/react": "~1.0.2",
+    "@conform-to/zod": "~1.0.2",
+    "@hookform/resolvers": "~3.3.4",
+    "@radix-ui/react-icons": "~1.3.0",
+    "@radix-ui/react-label": "~2.0.2",
+    "@radix-ui/react-slot": "~1.0.2",
+    "@storyblok/react": "~3.0.8",
+    "class-variance-authority": "~0.7.0",
     "colord": "~2.9.3",
-    "fast-xml-parser": "~4.3.3",
-    "isomorphic-dompurify": "~2.2.0",
-    "next": "~14.0.4",
+    "isomorphic-dompurify": "~2.4.0",
+    "next": "~14.1.0",
     "react": "~18.2.0",
-    "react-dom": "~18.2.0",
-    "sharp": "~0.32.6",
-    "swr": "~2.2.4"
+    "sharp": "~0.33.2",
+    "swr": "~2.2.5",
+    "tailwind-merge": "~2.2.1",
+    "tailwindcss-animate": "~1.0.7",
+    "zod": "~3.22.4"
   },
   "devDependencies": {
-    "@types/node": "~20.11.2",
-    "@types/react": "~18.2.48",
-    "@types/react-dom": "~18.2.18",
-    "autoprefixer": "~10.4.16",
+    "@types/node": "~20.11.19",
+    "@types/react": "~18.2.57",
+    "@types/react-dom": "~18.2.19",
+    "autoprefixer": "~10.4.17",
     "clsx": "~2.1.0",
     "eslint": "~8.56.0",
-    "eslint-config-next": "~14.0.4",
-    "eslint-plugin-tailwindcss": "~3.14.0",
-    "eslint-plugin-unused-imports": "~3.0.0",
+    "eslint-config-next": "~14.1.0",
+    "eslint-plugin-tailwindcss": "~3.14.3",
+    "eslint-plugin-unused-imports": "~3.1.0",
     "npm-run-all": "~4.1.5",
-    "postcss": "~8.4.33",
-    "prettier": "~3.2.2",
+    "postcss": "~8.4.35",
+    "prettier": "~3.2.5",
     "prettier-plugin-tailwindcss": "~0.5.11",
     "storyblok": "~3.26.0",
     "storyblok-generate-ts": "~2.0.1",
     "tailwindcss": "~3.4.1",
     "typescript": "~5.3.3",
-    "vitest": "~1.2.0",
+    "vitest": "~1.3.1",
     "vitest-tsconfig-paths": "~3.4.1"
   }
 }
