--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "sb:types": "run-s sb:pull-components sb:generate-types sb:eslint-types sb:prettier-types"
   },
   "dependencies": {
-    "@conform-to/react": "~1.0.2",
-    "@conform-to/zod": "~1.0.2",
+    "@conform-to/react": "~1.0.6",
+    "@conform-to/zod": "~1.0.6",
     "@hookform/resolvers": "~3.3.4",
     "@radix-ui/react-icons": "~1.3.0",
     "@radix-ui/react-label": "~2.0.2",
@@ -25,33 +25,33 @@
     "@storyblok/react": "~3.0.9",
     "class-variance-authority": "~0.7.0",
     "colord": "~2.9.3",
-    "isomorphic-dompurify": "~2.4.0",
-    "next": "~14.1.2",
+    "isomorphic-dompurify": "~2.7.0",
+    "next": "~14.1.4",
     "react": "~18.2.0",
-    "sharp": "~0.33.2",
-    "tailwind-merge": "~2.2.1",
+    "sharp": "~0.33.3",
+    "tailwind-merge": "~2.2.2",
     "tailwindcss-animate": "~1.0.7",
     "zod": "~3.22.4"
   },
   "devDependencies": {
-    "@types/node": "~20.11.24",
-    "@types/react": "~18.2.63",
-    "@types/react-dom": "~18.2.19",
-    "autoprefixer": "~10.4.18",
+    "@types/node": "~20.12.6",
+    "@types/react": "~18.2.75",
+    "@types/react-dom": "~18.2.24",
+    "autoprefixer": "~10.4.19",
     "clsx": "~2.1.0",
     "eslint": "~8.57.0",
-    "eslint-config-next": "~14.1.2",
-    "eslint-plugin-tailwindcss": "~3.14.3",
+    "eslint-config-next": "~14.1.4",
+    "eslint-plugin-tailwindcss": "~3.15.1",
     "eslint-plugin-unused-imports": "~3.1.0",
     "npm-run-all": "~4.1.5",
-    "postcss": "~8.4.35",
+    "postcss": "~8.4.38",
     "prettier": "~3.2.5",
-    "prettier-plugin-tailwindcss": "~0.5.11",
-    "storyblok": "~3.26.0",
-    "storyblok-generate-ts": "~2.0.2",
-    "tailwindcss": "~3.4.1",
-    "typescript": "~5.3.3",
-    "vitest": "~1.3.1",
-    "vitest-tsconfig-paths": "~3.4.1"
+    "prettier-plugin-tailwindcss": "~0.5.13",
+    "storyblok": "~3.30.0",
+    "storyblok-generate-ts": "~2.1.0",
+    "tailwindcss": "~3.4.3",
+    "typescript": "~5.4.4",
+    "vitest": "~1.4.0",
+    "vite-tsconfig-paths": "~4.3.2"
   }
 }
