--- a/package.json
+++ b/package.json
@@ -13,11 +13,12 @@
     "sb:generate-types": "storyblok-generate-ts source=./types/components.185369.json target=./types/sb-types",
     "sb:eslint-types": "eslint --fix ./types/sb-types.d.ts",
     "sb:prettier-types": "prettier --write ./types/sb-types.d.ts",
-    "sb:types": "run-s sb:pull-components sb:generate-types sb:eslint-types sb:prettier-types"
+    "sb:types": "run-s sb:pull-components sb:generate-types sb:eslint-types sb:prettier-types",
+    "pages:build": "npx @cloudflare/next-on-pages"
   },
   "dependencies": {
-    "@conform-to/react": "~1.0.6",
-    "@conform-to/zod": "~1.0.6",
+    "@conform-to/react": "~1.1.0",
+    "@conform-to/zod": "~1.1.0",
     "@hookform/resolvers": "~3.3.4",
     "@radix-ui/react-icons": "~1.3.0",
     "@radix-ui/react-label": "~2.0.2",
@@ -26,7 +27,7 @@
     "class-variance-authority": "~0.7.0",
     "colord": "~2.9.3",
     "isomorphic-dompurify": "~2.7.0",
-    "next": "~14.1.4",
+    "next": "~14.2.1",
     "react": "~18.2.0",
     "sharp": "~0.33.3",
     "tailwind-merge": "~2.2.2",
@@ -34,13 +35,13 @@
     "zod": "~3.22.4"
   },
   "devDependencies": {
-    "@types/node": "~20.12.6",
-    "@types/react": "~18.2.75",
-    "@types/react-dom": "~18.2.24",
+    "@types/node": "~20.12.7",
+    "@types/react": "~18.2.78",
+    "@types/react-dom": "~18.2.25",
     "autoprefixer": "~10.4.19",
     "clsx": "~2.1.0",
     "eslint": "~8.57.0",
-    "eslint-config-next": "~14.1.4",
+    "eslint-config-next": "~14.2.1",
     "eslint-plugin-tailwindcss": "~3.15.1",
     "eslint-plugin-unused-imports": "~3.1.0",
     "npm-run-all": "~4.1.5",
@@ -50,8 +51,8 @@
     "storyblok": "~3.30.0",
     "storyblok-generate-ts": "~2.1.0",
     "tailwindcss": "~3.4.3",
-    "typescript": "~5.4.4",
-    "vitest": "~1.4.0",
+    "typescript": "~5.4.5",
+    "vitest": "~1.5.0",
     "vite-tsconfig-paths": "~4.3.2"
   }
 }
