--- a/package.json
+++ b/package.json
@@ -22,11 +22,12 @@
     "@radix-ui/react-icons": "~1.3.0",
     "@radix-ui/react-label": "~2.0.2",
     "@radix-ui/react-slot": "~1.0.2",
-    "@storyblok/react": "~3.0.9",
+    "@storyblok/react": "~3.0.10",
     "class-variance-authority": "~0.7.0",
     "colord": "~2.9.3",
     "isomorphic-dompurify": "~2.7.0",
     "next": "~14.2.1",
+    "next-view-transitions": "~0.1.0",
     "react": "~18.2.0",
     "sharp": "~0.33.3",
     "tailwind-merge": "~2.2.2",
@@ -51,7 +52,7 @@
     "storyblok-generate-ts": "~2.1.0",
     "tailwindcss": "~3.4.3",
     "typescript": "~5.4.5",
-    "vitest": "~1.5.0",
-    "vite-tsconfig-paths": "~4.3.2"
+    "vite-tsconfig-paths": "~4.3.2",
+    "vitest": "~1.5.0"
   }
 }
