Add Action to create .env file

--- a/.github/workflows/fly.yml
+++ b/.github/workflows/fly.yml
@@ -7,9 +7,11 @@ jobs:
   deploy:
     name: Deploy app
     runs-on: ubuntu-latest
+    environment: Production
     concurrency: deploy-group    # optional: ensure only one action runs at a time
     steps:
       - uses: actions/checkout@v4
+      - uses: ./.github/actions/create-env
       - uses: superfly/flyctl-actions/setup-flyctl@master
       - run: flyctl deploy --remote-only
         env:
