--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "dev:https": "next dev --turbo --experimental-https --port 3010",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -16,43 +17,43 @@
     "sb:types": "run-s sb:pull-components sb:generate-types sb:eslint-types sb:prettier-types"
   },
   "dependencies": {
-    "@conform-to/react": "~1.1.0",
-    "@conform-to/zod": "~1.1.0",
-    "@hookform/resolvers": "~3.3.4",
+    "@conform-to/react": "~1.1.3",
+    "@conform-to/zod": "~1.1.3",
+    "@hookform/resolvers": "~3.4.2",
     "@radix-ui/react-icons": "~1.3.0",
     "@radix-ui/react-label": "~2.0.2",
     "@radix-ui/react-slot": "~1.0.2",
     "@storyblok/react": "~3.0.10",
     "class-variance-authority": "~0.7.0",
     "colord": "~2.9.3",
-    "isomorphic-dompurify": "~2.7.0",
-    "next": "~14.2.1",
+    "isomorphic-dompurify": "~2.11.0",
+    "next": "~14.2.3",
     "next-view-transitions": "~0.1.1",
-    "react": "~18.2.0",
-    "sharp": "~0.33.3",
-    "tailwind-merge": "~2.2.2",
+    "react": "~18.3.1",
+    "sharp": "~0.33.4",
+    "tailwind-merge": "~2.3.0",
     "tailwindcss-animate": "~1.0.7",
-    "zod": "~3.22.4"
+    "zod": "~3.23.8"
   },
   "devDependencies": {
-    "@types/node": "~20.12.7",
-    "@types/react": "~18.2.78",
-    "@types/react-dom": "~18.2.25",
+    "@types/node": "~20.12.12",
+    "@types/react": "~18.3.2",
+    "@types/react-dom": "~18.3.0",
     "autoprefixer": "~10.4.19",
-    "clsx": "~2.1.0",
+    "clsx": "~2.1.1",
     "eslint": "~8.57.0",
-    "eslint-config-next": "~14.2.1",
-    "eslint-plugin-tailwindcss": "~3.15.1",
-    "eslint-plugin-unused-imports": "~3.1.0",
+    "eslint-config-next": "~14.2.3",
+    "eslint-plugin-tailwindcss": "~3.17.0",
+    "eslint-plugin-unused-imports": "~3.2.0",
     "npm-run-all": "~4.1.5",
     "postcss": "~8.4.38",
     "prettier": "~3.2.5",
-    "prettier-plugin-tailwindcss": "~0.5.13",
-    "storyblok": "~3.30.0",
+    "prettier-plugin-tailwindcss": "~0.5.14",
+    "storyblok": "~3.31.1",
     "storyblok-generate-ts": "~2.1.0",
     "tailwindcss": "~3.4.3",
     "typescript": "~5.4.5",
     "vite-tsconfig-paths": "~4.3.2",
-    "vitest": "~1.5.0"
+    "vitest": "~1.6.0"
   }
 }
