--- a/package.json
+++ b/package.json
@@ -21,22 +21,23 @@
     "@conform-to/zod": "~1.1.4",
     "@hookform/resolvers": "~3.4.2",
     "@radix-ui/react-icons": "~1.3.0",
-    "@radix-ui/react-label": "~2.0.2",
-    "@radix-ui/react-slot": "~1.0.2",
+    "@radix-ui/react-label": "~2.1.0-rc.3",
+    "@radix-ui/react-slot": "~1.1.0-rc.3",
     "@storyblok/react": "~3.0.10",
     "class-variance-authority": "~0.7.0",
     "colord": "~2.9.3",
     "isomorphic-dompurify": "~2.11.0",
-    "next": "~14.2.3",
+    "next": "15.0.0-rc.0",
     "next-view-transitions": "~0.2.0",
-    "react": "~18.3.1",
+    "react": "19.0.0-rc.0",
+    "react-dom": "19.0.0-rc.0",
     "sharp": "~0.33.4",
     "tailwind-merge": "~2.3.0",
     "tailwindcss-animate": "~1.0.7",
     "zod": "~3.23.8"
   },
   "devDependencies": {
-    "@types/node": "~20.12.12",
+    "@types/node": "~20.14.1",
     "@types/react": "~18.3.3",
     "@types/react-dom": "~18.3.0",
     "autoprefixer": "~10.4.19",
@@ -47,8 +48,8 @@
     "eslint-plugin-unused-imports": "~3.2.0",
     "npm-run-all": "~4.1.5",
     "postcss": "~8.4.38",
-    "prettier": "~3.2.5",
-    "prettier-plugin-tailwindcss": "~0.5.14",
+    "prettier": "~3.3.0",
+    "prettier-plugin-tailwindcss": "~0.6.1",
     "storyblok": "~3.31.1",
     "storyblok-generate-ts": "~2.1.0",
     "tailwindcss": "~3.4.3",
