--- a/package.json
+++ b/package.json
@@ -17,43 +17,43 @@
     "sb:types": "run-s sb:pull-components sb:generate-types sb:eslint-types sb:prettier-types"
   },
   "dependencies": {
-    "@conform-to/react": "~1.1.4",
-    "@conform-to/zod": "~1.1.4",
-    "@hookform/resolvers": "~3.4.2",
+    "@conform-to/react": "~1.1.5",
+    "@conform-to/zod": "~1.1.5",
+    "@hookform/resolvers": "~3.6.0",
     "@radix-ui/react-icons": "~1.3.0",
     "@radix-ui/react-label": "~2.1.0-rc.3",
     "@radix-ui/react-slot": "~1.1.0-rc.3",
     "@storyblok/react": "~3.0.10",
     "class-variance-authority": "~0.7.0",
     "colord": "~2.9.3",
-    "isomorphic-dompurify": "~2.11.0",
-    "next": "15.0.0-rc.0",
+    "isomorphic-dompurify": "~2.12.0",
+    "next": "~14.2.4",
     "next-view-transitions": "~0.2.0",
-    "react": "19.0.0-rc.0",
-    "react-dom": "19.0.0-rc.0",
+    "react": "~18.3.1",
+    "react-dom": "~18.3.1",
     "sharp": "~0.33.4",
     "tailwind-merge": "~2.3.0",
     "tailwindcss-animate": "~1.0.7",
     "zod": "~3.23.8"
   },
   "devDependencies": {
-    "@types/node": "~20.14.1",
+    "@types/node": "~20.14.9",
     "@types/react": "~18.3.3",
     "@types/react-dom": "~18.3.0",
     "autoprefixer": "~10.4.19",
     "clsx": "~2.1.1",
     "eslint": "~8.57.0",
-    "eslint-config-next": "~14.2.3",
-    "eslint-plugin-tailwindcss": "~3.17.0",
+    "eslint-config-next": "~14.2.4",
+    "eslint-plugin-tailwindcss": "~3.17.4",
     "eslint-plugin-unused-imports": "~3.2.0",
     "npm-run-all": "~4.1.5",
     "postcss": "~8.4.38",
-    "prettier": "~3.3.0",
-    "prettier-plugin-tailwindcss": "~0.6.1",
-    "storyblok": "~3.31.1",
+    "prettier": "~3.3.2",
+    "prettier-plugin-tailwindcss": "~0.6.5",
+    "storyblok": "~3.32.1",
     "storyblok-generate-ts": "~2.1.0",
-    "tailwindcss": "~3.4.3",
-    "typescript": "~5.4.5",
+    "tailwindcss": "~3.4.4",
+    "typescript": "~5.5.2",
     "vite-tsconfig-paths": "~4.3.2",
     "vitest": "~1.6.0"
   }
