Upgrade dependencies and use Biome

--- a/package.json
+++ b/package.json
@@ -7,54 +7,49 @@
     "dev:https": "next dev --turbo --experimental-https --port 3010",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
+    "lint": "biome check .",
+    "lint:fix": "biome check --write --unsafe .",
     "test": "vitest run",
     "test:watch": "vitest",
-    "sb:pull-components": "storyblok pull-components --space=185369 --path=./types/",
-    "sb:generate-types": "storyblok-generate-ts source=./types/components.185369.json target=./types/sb-types",
-    "sb:eslint-types": "eslint --fix \"./types/sb-types.d.ts\" --no-ignore",
-    "sb:prettier-types": "prettier --write ./types/sb-types.d.ts",
-    "sb:types": "run-s sb:pull-components sb:generate-types sb:eslint-types sb:prettier-types"
+    "blok:pull-components": "storyblok pull-components --space=$(grep STORYBLOK_SPACE_DEV .env | cut -d '=' -f2) --path=./types/",
+    "blok:generate-types": "storyblok generate-typescript-typedefs --sourceFilePaths=./types/components.$(grep STORYBLOK_SPACE_DEV .env | cut -d '=' -f2).json --target=./types/sb-types.d.ts",
+    "blok:types": "run-s blok:pull-components blok:generate-types",
+    "blok:sync": "npx storyblok sync --type components --source $(grep STORYBLOK_SPACE_DEV .env | cut -d '=' -f2) --target $(grep STORYBLOK_SPACE_MAIN .env | cut -d '=' -f2)"
   },
   "dependencies": {
-    "@conform-to/react": "~1.1.5",
-    "@conform-to/zod": "~1.1.5",
-    "@hookform/resolvers": "~3.6.0",
-    "@radix-ui/react-icons": "~1.3.0",
-    "@radix-ui/react-label": "~2.1.0-rc.3",
-    "@radix-ui/react-slot": "~1.1.0-rc.3",
-    "@storyblok/react": "~3.0.10",
-    "class-variance-authority": "~0.7.0",
+    "@conform-to/react": "~1.2.2",
+    "@conform-to/zod": "~1.2.2",
+    "@hookform/resolvers": "~4.0.0",
+    "@radix-ui/react-icons": "~1.3.2",
+    "@radix-ui/react-label": "~2.1.2",
+    "@radix-ui/react-slot": "~1.1.2",
+    "@storyblok/react": "~4.3.6",
+    "class-variance-authority": "~0.7.1",
     "colord": "~2.9.3",
-    "isomorphic-dompurify": "~2.12.0",
-    "next": "~14.2.4",
-    "next-view-transitions": "~0.2.0",
+    "isomorphic-dompurify": "~2.21.0",
+    "next": "~15.1.7",
+    "next-view-transitions": "~0.3.4",
     "react": "~18.3.1",
     "react-dom": "~18.3.1",
-    "sharp": "~0.33.4",
-    "tailwind-merge": "~2.3.0",
+    "sharp": "~0.33.5",
+    "tailwind-merge": "~3.0.1",
     "tailwindcss-animate": "~1.0.7",
-    "zod": "~3.23.8"
+    "zod": "~3.24.1"
   },
   "devDependencies": {
-    "@types/node": "~20.14.9",
-    "@types/react": "~18.3.3",
-    "@types/react-dom": "~18.3.0",
-    "autoprefixer": "~10.4.19",
+    "@biomejs/biome": "1.9.4",
+    "@types/node": "~22.13.1",
+    "@types/react": "~19.0.8",
+    "@types/react-dom": "~19.0.3",
+    "autoprefixer": "~10.4.20",
     "clsx": "~2.1.1",
-    "eslint": "~8.57.0",
-    "eslint-config-next": "~14.2.4",
-    "eslint-plugin-tailwindcss": "~3.17.4",
-    "eslint-plugin-unused-imports": "~3.2.0",
     "npm-run-all": "~4.1.5",
-    "postcss": "~8.4.38",
-    "prettier": "~3.3.2",
-    "prettier-plugin-tailwindcss": "~0.6.5",
-    "storyblok": "~3.32.1",
-    "storyblok-generate-ts": "~2.1.0",
-    "tailwindcss": "~3.4.4",
-    "typescript": "~5.5.2",
-    "vite-tsconfig-paths": "~4.3.2",
-    "vitest": "~1.6.0"
+    "postcss": "~8.5.2",
+    "storyblok": "~3.35.2",
+    "storyblok-generate-ts": "~2.2.0",
+    "tailwindcss": "~3.4.17",
+    "typescript": "~5.7.3",
+    "vite-tsconfig-paths": "~5.1.4",
+    "vitest": "~3.0.5"
   }
 }
