--- a/.github/workflows/fly.yml
+++ b/.github/workflows/fly.yml
@@ -13,7 +13,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: ./.github/actions/create-env
         with:
-          STORYBLOK_TOKEN: ${{ vars.STORYBLOK_TOKEN }}
+          PUBLIC_NEXT_STORYBLOK_TOKEN: ${{ vars.PUBLIC_NEXT_STORYBLOK_TOKEN }}
           STORYBLOK_WEBHOOK_SECRET: ${{ vars.STORYBLOK_WEBHOOK_SECRET }}
       - uses: superfly/flyctl-actions/setup-flyctl@master
       - run: flyctl deploy --remote-only
