--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@radix-ui/react-label": "~2.1.2",
     "@radix-ui/react-slot": "~1.1.2",
     "@storyblok/react": "~4.3.6",
+    "@storyblok/richtext": "~3.0.2",
     "class-variance-authority": "~0.7.1",
     "colord": "~2.9.3",
     "isomorphic-dompurify": "~2.21.0",
