--- a/package.json
+++ b/package.json
@@ -29,26 +29,25 @@
     "colord": "~2.9.3",
     "isomorphic-dompurify": "~2.21.0",
     "next": "~15.1.7",
-    "next-view-transitions": "~0.3.4",
-    "react": "~18.3.1",
-    "react-dom": "~18.3.1",
+    "next-intl": "~3.26.3",
+    "react": "~19.0.0",
+    "react-dom": "~19.0.0",
     "sharp": "~0.33.5",
     "tailwind-merge": "~3.0.1",
-    "tailwindcss-animate": "~1.0.7",
-    "zod": "~3.24.1"
+    "zod": "~3.24.2"
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
+    "@tailwindcss/postcss": "4.0.6",
     "@types/node": "~22.13.1",
     "@types/react": "~19.0.8",
     "@types/react-dom": "~19.0.3",
-    "autoprefixer": "~10.4.20",
     "clsx": "~2.1.1",
     "npm-run-all": "~4.1.5",
     "postcss": "~8.5.2",
     "storyblok": "~3.35.2",
     "storyblok-generate-ts": "~2.2.0",
-    "tailwindcss": "~3.4.17",
+    "tailwindcss": "4.0.6",
     "typescript": "~5.7.3",
     "vite-tsconfig-paths": "~5.1.4",
     "vitest": "~3.0.5"
