--- a/package.json
+++ b/package.json
@@ -11,45 +11,45 @@
     "lint:fix": "biome check --write --unsafe .",
     "test": "vitest run",
     "test:watch": "vitest",
-    "blok:pull-components": "storyblok pull-components --space=$(grep STORYBLOK_SPACE_DEV .env | cut -d '=' -f2) --path=./types/",
-    "blok:generate-types": "storyblok generate-typescript-typedefs --sourceFilePaths=./types/components.$(grep STORYBLOK_SPACE_DEV .env | cut -d '=' -f2).json --target=./types/sb-types.d.ts",
-    "blok:types": "run-s blok:pull-components blok:generate-types",
-    "blok:sync": "npx storyblok sync --type components --source $(grep STORYBLOK_SPACE_DEV .env | cut -d '=' -f2) --target $(grep STORYBLOK_SPACE_MAIN .env | cut -d '=' -f2)"
+    "block:pull-components": "storyblok components pull --space=$(grep STORYBLOK_SPACE .env | awk -F '=' '{print $2}')",
+    "block:generate-types": "storyblok types generate --space $(grep STORYBLOK_SPACE .env | awk -F '=' '{print $2}') --type-prefix Sb --compiler-options .storyblok/storyblok.config.mjs",
+    "block:types": "run-s block:pull-components block:generate-types"
   },
   "dependencies": {
-    "@conform-to/react": "~1.8.2",
-    "@conform-to/zod": "~1.8.2",
-    "@hookform/resolvers": "~5.2.1",
-    "@radix-ui/react-icons": "~1.3.2",
-    "@radix-ui/react-label": "~2.1.7",
-    "@radix-ui/react-slot": "~1.2.3",
-    "@storyblok/react": "~5.4.5",
-    "@storyblok/richtext": "~3.7.0",
-    "class-variance-authority": "~0.7.1",
-    "colord": "~2.9.3",
-    "isomorphic-dompurify": "~2.26.0",
-    "next": "~15.5.2",
-    "next-intl": "~4.3.6",
-    "react": "~19.1.1",
-    "react-dom": "~19.1.1",
-    "sharp": "~0.34.3",
-    "tailwind-merge": "~3.3.1",
-    "zod": "~3.25.67"
+    "@conform-to/react": "1.13.3",
+    "@conform-to/zod": "1.13.3",
+    "@hookform/resolvers": "5.2.2",
+    "@radix-ui/react-icons": "1.3.2",
+    "@radix-ui/react-label": "2.1.8",
+    "@radix-ui/react-slot": "1.2.4",
+    "@storyblok/react": "5.4.19",
+    "@storyblok/richtext": "3.8.2",
+    "class-variance-authority": "0.7.1",
+    "colord": "2.9.3",
+    "next": "16.0.4",
+    "next-intl": "4.5.5",
+    "react": "19.2.0",
+    "react-dom": "19.2.0",
+    "sanitize-html": "2.17.0",
+    "sharp": "0.34.5",
+    "tailwind-merge": "3.4.0",
+    "zod": "3.25.32"
   },
   "devDependencies": {
-    "@biomejs/biome": "2.2.2",
-    "@tailwindcss/postcss": "4.1.12",
-    "@types/node": "~24.3.1",
-    "@types/react": "~19.1.12",
-    "@types/react-dom": "~19.1.9",
-    "clsx": "~2.1.1",
-    "npm-run-all": "~4.1.5",
-    "postcss": "~8.5.6",
-    "storyblok": "~3.36.1",
-    "storyblok-generate-ts": "~2.2.0",
-    "tailwindcss": "4.1.12",
-    "typescript": "~5.9.2",
-    "vite-tsconfig-paths": "~5.1.4",
-    "vitest": "~3.2.4"
+    "@biomejs/biome": "2.3.7",
+    "@tailwindcss/postcss": "4.1.17",
+    "@types/node": "24.10.1",
+    "@types/react": "19.2.7",
+    "@types/react-dom": "19.2.3",
+    "@types/sanitize-html": "2.16.0",
+    "clsx": "2.1.1",
+    "npm-run-all": "4.1.5",
+    "postcss": "8.5.6",
+    "storyblok": "4.9.0",
+    "storyblok-generate-ts": "2.2.0",
+    "tailwindcss": "4.1.17",
+    "typescript": "5.9.3",
+    "vite-tsconfig-paths": "5.1.4",
+    "vitest": "4.0.14"
   }
 }
