--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "next dev --turbo",
     "dev:https": "next dev --turbo --experimental-https --port 3010",
-    "build": "next build",
+    "build": "@cloudflare/next-on-pages",
+    "pages:build": "@cloudflare/next-on-pages",
     "start": "next start",
     "lint": "biome check .",
     "lint:fix": "biome check --write --unsafe .",
@@ -16,40 +17,42 @@
     "block:types": "run-s block:pull-components block:generate-types"
   },
   "dependencies": {
-    "@conform-to/react": "1.13.3",
-    "@conform-to/zod": "1.13.3",
+    "@conform-to/react": "1.14.1",
+    "@conform-to/zod": "1.14.1",
     "@hookform/resolvers": "5.2.2",
     "@radix-ui/react-icons": "1.3.2",
     "@radix-ui/react-label": "2.1.8",
     "@radix-ui/react-slot": "1.2.4",
-    "@storyblok/react": "5.4.19",
+    "@storyblok/react": "5.4.20",
     "@storyblok/richtext": "3.8.2",
     "class-variance-authority": "0.7.1",
     "colord": "2.9.3",
-    "next": "16.0.4",
-    "next-intl": "4.5.5",
-    "react": "19.2.0",
-    "react-dom": "19.2.0",
+    "next": "15.5.7",
+    "next-intl": "4.5.8",
+    "react": "19.2.1",
+    "react-dom": "19.2.1",
     "sanitize-html": "2.17.0",
     "sharp": "0.34.5",
     "tailwind-merge": "3.4.0",
     "zod": "3.25.32"
   },
   "devDependencies": {
-    "@biomejs/biome": "2.3.7",
+    "@biomejs/biome": "2.3.8",
+    "@cloudflare/next-on-pages": "1.13.16",
     "@tailwindcss/postcss": "4.1.17",
-    "@types/node": "24.10.1",
+    "@types/node": "24.10.2",
     "@types/react": "19.2.7",
     "@types/react-dom": "19.2.3",
     "@types/sanitize-html": "2.16.0",
     "clsx": "2.1.1",
     "npm-run-all": "4.1.5",
     "postcss": "8.5.6",
-    "storyblok": "4.9.0",
+    "storyblok": "4.11.0",
     "storyblok-generate-ts": "2.2.0",
     "tailwindcss": "4.1.17",
     "typescript": "5.9.3",
+    "vercel": "47.0.4",
     "vite-tsconfig-paths": "5.1.4",
-    "vitest": "4.0.14"
+    "vitest": "4.0.15"
   }
 }
