--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,6 +1,11 @@
 name = "next-storyblok"
 compatibility_date = "2024-11-26"
-pages_build_output_dir = ".vercel/output/static"
+compatibility_flags = ["nodejs_compat"]
+
+main = ".worker/index.mjs"
+
+# Automatically place the workerd and the assets on the same global network location
+assets = { directory = ".worker/assets", binding = "ASSETS" }
 
 [observability]
 enabled = true
