Update Cloudflare config and Next.js version, clean up files Update Cloudflare config, Next.js version, and clean up files
- Switch from wrangler.toml to wrangler.jsonc for Cloudflare config
- Add generated cloudflare-env.d.ts for type safety
- Update Next.js to v15.5.7 and adjust related scripts
- Remove unused incremental cache override in open-next.config.ts
- Add public/_headers for static asset caching
- Clean up middleware and config files for consistency
- Change tsconfig.json jsx setting to preserve
- Improve type safety in webhooks utility

--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
     "dev": "next dev --turbo",
     "dev:https": "next dev --turbo --experimental-https --port 3010",
     "build": "next build",
-    "pages:build": "npx @opennextjs/cloudflare build",
-    "pages:dev": "npx wrangler dev",
-    "pages:deploy": "npx wrangler deploy",
+    "preview": "opennextjs-cloudflare build && opennextjs-cloudflare preview",
+    "deploy": "opennextjs-cloudflare build && opennextjs-cloudflare deploy",
+    "cf-typegen": "wrangler types --env-interface CloudflareEnv cloudflare-env.d.ts",
     "start": "next start",
     "lint": "biome check .",
     "lint:fix": "biome check --write --unsafe .",
@@ -30,7 +30,7 @@
     "@swc/helpers": "0.5.17",
     "class-variance-authority": "0.7.1",
     "colord": "2.9.3",
-    "next": "16.0.8",
+    "next": "15.5.7",
     "next-intl": "4.5.8",
     "react": "19.2.1",
     "react-dom": "19.2.1",
